samples/_failures_safe/1761362330_2dffd1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_65603ee0.c: In function ‘main’:
./samples/SAFE/__tmp_65603ee0.c:150:5: error: expected declaration or statement at end of input
  150 |     if (len > 0 && input_buffer[len - 1] == '\n') {
      |     ^~
./samples/SAFE/__tmp_65603ee0.c:150:5: error: expected declaration or statement at end of input
